--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "objtostringdotannotation",
+  "name": "objectdotnotate",
   "version": "1.0.0",
-  "description": "A simple package that turns a json object(javascript object) whether nested or not into a string dot anotation.  ",
-  "main": "dot.js",
+  "description": "Javascript function that turns nested json objects into dotted strings",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kenneth051/objToStringDotNotation.git"
+    "url": "git+https://github.com/kenneth051/objectdotnotate.git"
   },
-  "author": "kenneth051",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kenneth051/objToStringDotNotation/issues"
+    "url": "https://github.com/kenneth051/objectdotnotate/issues"
   },
-  "homepage": "https://github.com/kenneth051/objToStringDotNotation#readme",
+  "homepage": "https://github.com/kenneth051/objectdotnotate#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "mocha": "^6.2.2"
   }
 }
