--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "email": "kjdumba@gmail.com"
   },
   "license": "MIT",
+  "keywords": [
+    "object",
+    "notation",
+    "dot"
+  ],
   "bugs": {
     "url": "https://github.com/kenneth051/objectdotnotate/issues"
   },
   "homepage": "https://github.com/kenneth051/objectdotnotate#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
     "mocha": "^6.2.2",
